crates/toml_edit/tests/snapshots/invalid/ext/string/bad-escape-6.stderr
TOML parse error at line 1, column 10
  |
1 | foo = "\"
  |          ^
invalid basic string
